--- a/main.html
+++ b/main.html
@@ -19,6 +19,7 @@
 		<div class="key" data-key="75">K</div>
 		<div class="key" data-key="76">L</div>
 	</div>
+	<audio data-key="65" src="sound/clap.wav"></audio>
     <script type="text/javascript" src="./script.js">
 </script>
 
